--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -86,7 +86,7 @@
 }
 
 #scroll-top-button {
-	z-index: $z-global-menu-overlay;
+	z-index: $z-scroll-top-button;
 	position: fixed;
 	margin-right: 16px;
 	margin-bottom: 16px;
